# circular-buffer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  conanfile.py
_cmake/: BuildProperties.cmake  ClangTidy.cmake  Coverage.cmake
circularbuffer/: CMakeLists.txt
circularbuffer/include/pjexx/: CMakeLists.txt  circularbuffer.h  concepts.h
circularbuffer/include/pjexx/circularbuffer/: CMakeLists.txt  iterators.h  position.h
examples/: CMakeLists.txt
examples/01-basic/: CMakeLists.txt  main.cpp
examples/02-complex-type/: CMakeLists.txt  main.cpp
examples/03-algorithms/: CMakeLists.txt  main.cpp
examples/04-ranges/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  tst_circularbuffer.cpp  tst_position.cpp
